[gd_scene load_steps=4 format=3 uid="uid://bkv88g68yvyeo"]

[ext_resource type="StyleBox" uid="uid://dyco6u4al2ulf" path="res://assets/OnButtonDefault.tres" id="1_4o0e4"]
[ext_resource type="Script" path="res://scenes/games_button.gd" id="1_ieyum"]
[ext_resource type="StyleBox" uid="uid://bewp26fntl6yf" path="res://assets/OnButtonHovered.tres" id="2_2hx63"]

[node name="Button" type="Button"]
custom_minimum_size = Vector2(80, 20)
offset_right = 8.0
offset_bottom = 8.0
theme_override_styles/normal = ExtResource("1_4o0e4")
theme_override_styles/hover = ExtResource("2_2hx63")
theme_override_styles/pressed = ExtResource("2_2hx63")
theme_override_styles/focus = ExtResource("2_2hx63")
script = ExtResource("1_ieyum")
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
